SpinBox: add validator, textFromValue and valueFromText

Change-Id: I45e01199453ac5fd64b7f98c165cc12eeb0ce8c3
Task-number: QTBUG-48989
Reviewed-by: Mitch Curtis <mitch.curtis@theqtcompany.com>
Reviewed-by: Nikita Krupenko <krnekit@gmail.com>